@@ -11,6 +11,9 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 ### Changed
 - Changed some public APIs (eg Components, Custom Events) to no longer be thunked.
 
+### Added
+- Added new `isOpen` API to the `SplitFloatingToolbar` and `SplitSlidingToolbar` components.
+
 ### Fixed
 - Fixed `AriaOwner` not able to find the owner component when rendered within a ShadowRoot.
 - Fixed `AriaFocus` not preserving focus when the component is rendered within a ShadowRoot.
